--- a/src/main/webapp/resources/css/joinmembership.css
+++ b/src/main/webapp/resources/css/joinmembership.css
@@ -19,21 +19,6 @@ body{
 
 }
 
-#join_membership_main_div2{
-	background-color:white;
-	width:810px;
-	height: 490px;
-	margin: 0 auto;
-
-}
-#join_membership_main_div3{
-	background-color:white;
-	width:810px;
-	height: 490px;
-	margin: 0 auto;
-
-}
-
 #join_membership_img_logo{
 	display:flex;
 	margin-bottom: 30px;
@@ -264,13 +249,15 @@ body{
 	background-color: white;
 	cursor: pointer;
 	outline: 0;
+	margin: 0px 60px;
 	margin-top: 30px;
-	margin-left:45px;
 }
+
 #join_membership_next_btn:hover{
 	background-color: orange;
 	color:white;
 }
+
 .join_membership_error{
 	width:225px;
 	height: 20px;
@@ -284,83 +271,17 @@ body{
 	margin-bottom: 5px;
 }
 
-
-/*------------카테고리-----------------*/
-
-#join_membership_head-page-category-wrap{
-	width:calc(56.76vw - 140px); 
-	min-width:420px;
-}
-#join_membership_category_btn{
-border: solid 2px orange;
-    width: 200px;
-    height: 50px;
-    background-color: white;
-    cursor: pointer;
-    outline: 0;
-    margin-top: 26px;
-    margin-left: 317px;
-}
-/*우측사이드창 - category*/
-#join_membership_head-page-category-frame{
-	width:calc(56.76vw - 50px);
-	min-width:376px;
-	height:220px;
-	display:flex;
-	justify-content: center;
-	align-items: center;
-}
-#join_membership_head-page-category-list{
-	list-style: none;
-	display:flex;
-	justify-content: center;
-	align-items: center;
-	flex-wrap:wrap;
-	margin:0;
-	padding:0 calc(3.1vw - 23px);
-}
-.join_membership_head-page-category-item{
-	width: calc(7.55vw - 10px);
-	height: calc(7.55vw - 55px);
-	min-width: 50px;
-	min-height: 50px;
-	margin: 15px 12px;
-	display:flex;
-	justify-content: center;
-	align-items: center;
-}
-.join_membership_head-page-category-item a{
-	background-color:#fff;
-	width: calc(7.55vw - 10px);
-	height: calc(7.55vw - 10px);
-	min-width: 67px;
-	min-height: 67px;
-	cursor:pointer;
-	display:inline-block;
-	line-height:calc(7.55vw - 10px);
-	text-decoration: none;
-	text-align: center;
-	color: #3d3d3d;
-	font-size: 13px;
-}
-
-.join_membership_head-page-category-item a:hover{
-	background-color: #f79482;
-}
-
-
+/*---------------프로필 설정----------------*/
 /* 광훈이 css */
 
-
-#join_membership_profile_main_edit{
-	min-height: calc(100vh - 380px);
+#join_membership_profile_main{
 	background: white;
 }
-#join_membership_profile_edit_title{
+#join_membership_profile_title{
 	text-align: center;
 	margin: 0;
 }
-#join_membership_profile_main_edit_article{
+#join_membership_profile_main_article{
 	line-height:1.2;
 	position: relative; 
 	width:545px;
@@ -371,15 +292,17 @@ border: solid 2px orange;
 	background: #fff;
 	border:  1px solid  #eee;
 }
-#join_membership_profile_edit_img{
+#join_membership_profile_img{
+	display:inline;
 	margin-right: 35px;
 	border-radius:55px;
 	width:100px;
 	height: 100px;
 	float: right;
 	z-index: 0;
+	border: 1px solid gray;
 }
-#join_membership_profile_img_edit_button{
+#join_membership_profile_img_button{
 	position: absolute;
     box-shadow: 1px 1px 1px #eee;
     top: 75px;
@@ -401,7 +324,7 @@ border: solid 2px orange;
 	line-height: 0;
 	text-indent: -9999px;
 }
-.join_membership_profile_input_hide{
+#join_membership_profile_input_hide{
 	overflow: hidden;
 	position: absolute;
 	top:0;
@@ -415,10 +338,10 @@ border: solid 2px orange;
 	text-indent: -9999px;
 	cursor: pointer;
 }
-#join_membership_profile_edit{
+#join_membership_profile{
 	
 }
-.join_membership_profile_edit_font{
+.join_membership_profile_font{
 	margin-top:35px;
 	font-size: 13px;
 	line-height: 1.5;
@@ -433,9 +356,9 @@ border: solid 2px orange;
     outline: none;
     border: none;
     border-bottom: 1px solid #eee;
-    width: 35%;
+    width: 40%;
 }
-.join_membership_profile_edit_font{
+.join_membership_profile_font{
 	margin-top:35px;
 	font-size: 13px;
 	line-height: 1.5;
@@ -445,7 +368,7 @@ border: solid 2px orange;
     border: 1px solid #EEE;
     background-color: #fff;
 }
-.join_membership_profile_edit_info{
+.join_membership_profile_info{
 	display: block;
 	width: 100%;
 	margin:0;
@@ -459,27 +382,98 @@ border: solid 2px orange;
 	resize: none;
 	height: 40px;
 }
-.join_membership_profile_edit_btn2{
-/* 	margin: 0 5px;
-	    outline: none;
-    border: 1px solid;
-    background: white;
-    border-radius: 15px;
-    padding: 2px 14px;
-    color: #ff8040;
-    margin-left: 250px;
-    margin-top: 25px; */
-	
-	border: solid 2px orange;
-    width: 200px;
-    height: 50px;
-    background-color: white;
-    cursor: pointer;
-    outline: 0;
-    margin-top: 14px;
-    margin-left: 190px;
 
+.join_membership_button_container{
+	display:flex;
+	justify-content: center;
 }
+#join_membership_before_btn2, #join_membership_next_btn2{
+	border: solid 2px orange;
+	width: 200px;
+	height: 50px;
+	background-color: white;
+	cursor: pointer;
+	outline: 0;
+	margin:0 45px;
+	margin-top: 30px;
+}
+#join_membership_before_btn2:hover{
+	background-color: orange;
+	color:white;
+}
+#join_membership_next_btn2:hover{
+	background-color: orange;
+	color:white;
+}
+
+
+/*------------카테고리-----------------*/
+
+#join_membership_category-wrap{
+	margin:0 100px;
+}
+
+#join_membership_category-frame{
+	height:220px;
+	display:flex;
+	justify-content: center;
+	align-items: center;
+}
+#join_membership_category-list{
+	width:470px;
+	list-style: none;
+	display:flex;
+	justify-content: center;
+	align-items: center;
+	flex-wrap:wrap;
+	margin:0 auto;
+	padding:0;
+}
+.join_membership_category-item{
+	margin: 5px 5px;
+	display:flex;
+	justify-content: center;
+	align-items: center;
+}
+.join_membership_category-item span{
+	height:70px;
+	width:70px;
+	font-size:13px;
+	text-align: center;
+	line-height:70px;
+	outline:1px solid #b1b1b1;
+	cursor: pointer;
+}
+.join_membership_category-item span:hover{
+	background-color: #fba621;
+	outline:none;
+}
+.member_category_check span{
+	background-color: #fba621;
+	outline:none;
+}
+
+#join_membership_before_btn3, #join_membership_next_btn3{
+	border: solid 2px orange;
+	width: 200px;
+	height: 50px;
+	background-color: white;
+	cursor: pointer;
+	outline: 0;
+	margin:0 45px;
+	margin-top: 30px;
+}
+#join_membership_before_btn3:hover{
+	background-color: orange;
+	color:white;
+}
+#join_membership_next_btn3:hover{
+ 	background-color: orange;
+	color:white;
+}
+
+
+
 
 
 
