그 거시기 new_book 짜잘한거 수정함

--- a/src/main/webapp/resources/css/new_book.css
+++ b/src/main/webapp/resources/css/new_book.css
@@ -187,7 +187,6 @@
 .new_book_banner_book_image_container {
 	display: table;
 	height: auto;
-	position: relative;
 }
 
 .new_book_banner_book_image {
@@ -405,4 +404,7 @@
 	background: #000;
 	top: 0;
 	opacity: 0.03;
+}
+.button:active{
+	outline: none;
 }
