--- a/src/main/webapp/resources/css/admin.css
+++ b/src/main/webapp/resources/css/admin.css
@@ -6,6 +6,9 @@ a:active{text-decoration:none;}
 a:visited{text-decoration:none;}
 a:hover{text-decoration:underline;}
 
+.clear {
+	clear:both;
+}
 
 /* admin_login ui */
 
@@ -65,6 +68,8 @@ a:hover{text-decoration:underline;}
 #adm_main_welcome {
 	display:flex;
 	justify-content:flex-end;
+	font-size: 13px;
+    padding-right: 10px;
 }
 
 #adm_main_menu {
@@ -146,7 +151,7 @@ a:hover{text-decoration:underline;}
 #adm_main_footer {
     border-top: dotted 2px gray;
     width: 800px;
-    margin: 10px auto;
+    margin: 25px auto;
     display: flex;
     justify-content: space-around;
     padding-top: 25px;
@@ -165,37 +170,178 @@ a:hover{text-decoration:underline;}
 
 /* admin_notice (공지사항) */
 #adm_notice_wrap {
+	display: flex;
+    justify-content: center;
+    min-height: 500px;
+    width: 800px;
+    margin: 0 auto;
+}
+
+.adm_notice_count {
+	padding-bottom:10px;
+}
+
+#adm_notice_table {
+    font-size: 12px;
+    width: 800px;
+}
+
+#adm_notice_table td{
+	overflow:hidden;
+	white-space : nowrap;
+	text-overflow: ellipsis;
+}
+
+.list_underline {
+	border-bottom: .5px dotted gray;
+	padding: .5em .2em;
+}
+
+#paging {
+	padding: 1em .2em;
+}
+
+#search_interface {
 	display:flex;
 	justify-content:center;
 }
 
-#adm_notice_table {
-	min-width:700px;
+#search_name {
+	margin: 0 7px;
+}
+
+/* admin_notice_write */
+
+#notice_write_wrap {
+	display:flex;
+	justify-content:center;
+	width: 800px;
+    margin: 15px auto;
+}
+
+#notice_write_form {
+	width:100%;
+}
+
+.notice_text_field {
+	/*width: 100%; /* 원하는 너비 설정 */
+	height: auto; /* 높이값 초기화 */ 
+	line-height : normal; /* line-height 초기화 */
+	padding: .5em .5em; /* 원하는 여백 설정, 상하단 여백으로 높이를 조절 */
+	font-family: inherit; /* 폰트 상속 */
+	border: 1px solid #999;
+	border-radius: 0; /* iSO 둥근모서리 제거 */
+	outline-style: none; /* 포커스시 발생하는 효과 제거를 원한다면 */
+	-webkit-appearance: none; /* 브라우저별 기본 스타일링 제거 */
+	-moz-appearance: none;
+	appearance: none;
 }
 
 
+#noti_title {
+	width:100%;
+	max-width: 654px;
+}
+
+#noti_cont {
+	width:100%;
+	padding: .5em 1.5em;
+	max-width: 750px;
+}
+
+#notice_submit_btn {
+	width:65px;
+	border: 1px solid lightgrey;
+    border-radius: 10px;
+    background-color: white;
+    padding: 4px;
+    cursor:pointer;
+}
+
+#notice_submit_btn:hover {
+	border: 1px solid lightgrey;
+    border-radius: 10px;
+    background-color: lightgrey;
+    padding: 4px;
+    color:white;
+}
+
+.notice_btn {
+	width:65px;
+	border: 1px solid lightgrey;
+    border-radius: 10px;
+    background-color: white;
+    padding: 4px;
+    cursor:pointer;
+    margin:0 3px;
+}
+
+.notice_btn:hover {
+	border: 1px solid lightgrey;
+    border-radius: 10px;
+    background-color: lightgrey;
+    padding: 4px;
+    color:white;
+}
+
+/* admin_notice_cont */
+
+#notice_cont_wrap {
+	max-width: 800px;
+    margin: 10px auto;
+}
 
 
+#cont_title_wrap h3{
+	text-align:center;
+}
 
+#cont_sub_info {
+	list-style: none;
+    display: flex;
+    justify-content: space-between;
+    font-size: 13px;
+    width:50%;
+    float:right;
+}
 
+#cont_body_wrap {
+    max-width: 800px;
+    border: 1px solid lightgray;
+    padding: .5em 1.5em;
+    min-height: 500px;
+    margin: 20px auto;
+    height: auto;
+    line-height: normal;
+    padding: .5em .5em;
+    font-size:13px;
+   /*font-family: inherit;*/
+    border: 1px solid #999;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
 
+#cont_button_wrap {
+	display:flex;
+	justify-content:flex-end;
+}
 
+/* admin_notice_del */
 
+#notice_del_wrap {
+	display:flex;
+	justify-content:center;
+	min-height:500px;
+}
 
+#notice_del_wrap table{
+	margin:auto;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+#notice_del_wrap th {
+	height:40px;
+}
 
 
 
