--- a/src/main/webapp/resources/css/inquire.css
+++ b/src/main/webapp/resources/css/inquire.css
@@ -316,5 +316,6 @@ color:transparent;
  
  input:focus:-ms-input-placeholder,
  textarea:focus:-ms-input-placeholder { /* Internet Explorer 10+ */ 
- color:transparent; }
+ color:transparent; 
+ }
 
