--- a/src/main/webapp/resources/css/book_create.css
+++ b/src/main/webapp/resources/css/book_create.css
@@ -55,7 +55,7 @@
 	outline: none;
 	cursor: pointer;
 	color: #363636;
-	z-index: 100000000;
+	display: inline-block;
 }
 
 .btn.checkAll, .btn.releaseAll {
@@ -115,4 +115,12 @@ input[type="checkbox"]:checked+div.post_list_cont {
 
 #create_book {
 	display: inline-block;
+}
+
+#create_book{
+	position:relative;
+	width:290px;
+	height: 55px;
+	margin-left: 650px;
+	text-align: center;
 }
