--- a/src/main/webapp/resources/css/new_book.css
+++ b/src/main/webapp/resources/css/new_book.css
@@ -244,22 +244,26 @@
 	background: url(../img/off-prev.png) no-repeat;
 	left: 30px;
 	z-index: 100;
+	outline: none;
 }
 
 .new_book_list_work .btn_move_slide.prev.on {
 	background: url(../img/on-prev.png) no-repeat;
 	cursor: pointer;
+	outline: none;
 }
 
 .new_book_list_work .btn_move_slide.next {
 	background: url(../img/off-next.png) no-repeat;
 	right: 30px;
 	z-index: 100;
+	outline: none;
 }
 
 .new_book_list_work .btn_move_slide.next.on {
 	background: url(../img/on-next.png) no-repeat;
 	cursor: pointer;
+	outline: none;
 }
 
 .new_book_list_work .new_book_list_work_title {
@@ -405,6 +409,7 @@
 	top: 0;
 	opacity: 0.03;
 }
-.button:active{
+
+.button:active {
 	outline: none;
 }
