--- a/src/main/webapp/resources/css/login.css
+++ b/src/main/webapp/resources/css/login.css
@@ -14,6 +14,7 @@ body{
 #login_main_form{
 	background-color: #fff;
 	width:450px;
+	height: 570px;
 	margin:0 auto;
 }
 
@@ -37,7 +38,7 @@ body{
 	text-align: center;
 }
 #login_id, 
-#login_pass{
+#login_pwd{
 	width: 280px;
 	height: 30px;
 	line-height: 30px;
@@ -58,14 +59,15 @@ body{
 }
 
 .login_error{
-	width:300px;
-	height: 20px;
-	margin: 14px 5px;
-	padding-left:65px;
-	color:#ff0000;
-	font-size: 12px;
-	text-align:left;
-	line-height: 20px;
+	width: 300px;
+    height: 20px;
+    margin: 5px 5px;
+    margin-bottom: 15px;
+    padding-left: 65px;
+    color: #ff0000;
+    font-size: 12px;
+    text-align: left;
+    line-height: 20px;
 }
 
 .msgbox{
