--- a/src/main/webapp/resources/css/member_modify.css
+++ b/src/main/webapp/resources/css/member_modify.css
@@ -1,175 +1,271 @@
-@charset "UTF-8";
+#member_modify_main_wrap {
+	padding: calc(( 100vh - 580px)/2) 0;
+	background-image: url(../img/background_img/login_pattern2.jpg);
+    background-size: cover;
+}
 
-body{
-	margin: 0px;
-	padding: 0px;
-}
-#member_modify_main_wrap{
-    padding: calc((100vh - 682px) / 2) 0;
-   	background-image: url(../img/background_img/login_pattern2.jpg);
-   	background-size: cover;
-   	background-repeat: no-repeat;
-}
-#member_modify_img_logo img{
-	width: 200px;
-	height: 75px;
-	padding-top: 40px;
-	margin-left: 50px;
-}
-#member_modify_label{
-	display: block;
-	margin-left: 60px;
-	margin-top: 10px;
-	font-size: 18px;
-	font-weight: 500;
-}
-#member_modify_main_div{/* 메인디브 */
-	
-	width:750px;
-	height:520px;
-	background-color:white;
+#member_modify_main_div {
+	background-color: white;
+	width: 840px;
+	height: 525px;
 	margin: 0 auto;
 }
-#member_modify_id_pwd_name_birth{/* 왼쪽디브 */
-	width: 320px;
-	height: 270px;
+
+#member_modify_img_logo {
+	display: flex;
+	margin-bottom: 40px;
+}
+
+#member_modify_img_logo a {
+	width: 200px;
+	height: 75px;
+	margin-top: 50px;
+	margin-left: 100px;
+}
+
+#member_modify_img_logo img {
+	width: 200px;
+	height: 75px;
+}
+
+#member_modify_sequence_box {
+	display: flex;
+	justify-content: flex-end;
+	align-items: flex-end;
+	width: 440px;
+	height: 129px;
+	margin-right: 100px;
+}
+
+#member_modify_sequence {
+	display: flex;
+	list-style: none;
+}
+
+.member_modify_sequence_list {
+	margin: 20px;
+	padding: 10px;
+	font-size: 25px;
+	border: 2px solid #F5F0F0;
+	border-radius: 5px;
+}
+
+.membership_step {
+	border: 2px solid orange;
+}
+
+#member_modify_sub_div_1 {
 	display: inline-block;
-	margin-left: 50px;
-	margin-top: 20px;
-	margin-right: 10px;
-
-}
-#member_modify_profile_gender_email_tel{/* 오른쪽디브 */
 	width: 320px;
-	height: 270px;
-	text-align: center;
-	display: inline-block;	
+	height: 230px;
 	margin-top: 20px;
-	margin-left: 10px;
-}
-/* 기본값 */
-.member_modify_boxsize{
-	width: 270px;
-	height: 30px;
-	font-size:20px;
-	padding-left: 20px;
-	padding-bottom: 5px;
-	outline: 0;
-	border-left: none;
-	border-right: none;
-	border-top: none;
-}
-.member_modify_boxsize:hover{
-	border-bottom: 2px solid orange;
+	margin-left: 100px;
 }
 
-.member_modify_boxsize:focus{
-	border-bottom: 2px solid orange;
-}
-.member_modify_error{
-	width: 280px;
-	height: 20px;
-	line-height:20px;
-	padding-left: 20px;
-}
-
-/* --------------------------------- */
-
-.member_modify_boxsize_birth{
-	width: 86px;
-	height: 30px;
-	font-size:20px;
-	padding-left:20px;
-	padding-bottom:5px;
-	outline: 0;
-	border-left: none;
-	border-right: none;
-	border-top: none;
-}
-
-/* 여기부터 두번째 박스 안에 있는 애들 설정 */
-
-.modify_member_radio_btn{/* 버튼 설정 */
-	text-align:center;
-	margin-right:30px;
-	width: 15px;
-	height: 15px;
-	cursor: pointer;
-	padding-bottom: 5px;
-}
-#modify_member_radio_btn_div{ /* 버튼 디브 설정 */
-	border-bottom:2px solid #F5F0F0;
+#member_modify_sub_div_2 {
+	display: inline-block;
 	width: 320px;
+	height: 230px;
+	vertical-align: top;
+	margin-top: 20px;
+}
+
+.member_modify_text { /* 인풋박스 설정 */
+	width: 265px;
 	height: 30px;
 	line-height: 30px;
-}
-.member_modify_boxsize_tel{/* 번호박스사이즈 설정 */
-	width: 82px;
-	height: 30px;
-	font-size:20px;
-	padding-left:20px;
-	padding-bottom:5px;
+	font-size: 18px;
+	padding-left: 20px;
 	outline: 0;
 	border-left: none;
 	border-right: none;
 	border-top: none;
 }
 
-#member_modify_boxsize_email{
-	width: 110px;
+.member_modify_text:hover {
+	border-bottom: 2px solid orange;
+}
+
+.member_modify_text:focus {
+	border-bottom: 2px solid orange;
+}
+
+.member_modify_birth {
+	width: 200px;
 	height: 30px;
-	font-size:20px;
-	padding-left:20px;
-	padding-bottom:5px;
+}
+
+.member_modify_birth:hover {
+	border-bottom: 2px solid orange;
+}
+
+.member_modify_birth:focus {
+	border-bottom: 2px solid orange;
+}
+
+#member_modify_select_gender {
+	-webkit-appearance: none; /* 네이티브 외형 감추기 */
+	-moz-appearance: none;
+	appearance: none;
+	width: 75px;
+	height: 35px;
+	padding-left: 15px;
+	padding-bottom: 5px;
+	font-size: 18px;
+	color: gray;
+	border: 2px solid #F5F0F0;
 	outline: 0;
 	border-left: none;
 	border-right: none;
 	border-top: none;
+	cursor: pointer;
 }
 
-#member_modify_boxsize_email_datalist{
-	-webkit-appearance:none;/* 네이티브 외형 감추기 */
-	-moz-appearance:none;
-	appearance:none;	
+#member_modify_select_gender:hover {
+	border-bottom: 2px solid orange;
+}
+
+#member_modify_select_gender:focus {
+	border-bottom: 2px solid orange;
+}
+
+.member_modify_birth {
+	width: 55px;
+	height: 30px;
+	font-size: 18px;
+	outline: 0;
+	border-left: none;
+	border-right: none;
+	border-top: none;
+	padding-left: 20px;
+	padding-bottom: 2px;
+}
+
+#member_modify_birth {
+	width: 210px;
+	height: 35px;
+	font-size: 18px;
+	color: gray;
+	outline: 0;
+	border-left: none;
+	border-right: none;
+	border-top: none;
+	padding-left: 20px;
+}
+/* #F5F0F0 셀렉트박스에 넣을 회색 */
+.member_modify_email_class {
+	display: inline;
+}
+
+.member_modify_email_class :hover {
+	border-bottom: 2px solid orange;
+}
+
+.member_modify_email_class :focus {
+	border-bottom: 2px solid orange;
+}
+
+.member_modify_email {
+	border: 2px solid #F5F0F0;
+	border-left: none;
+	border-right: none;
+	border-top: none;
+	height: 30px;
 	width: 90px;
+	font-size: 18px;
+	outline: 0;
+	padding-left: 20px;
+}
+
+#member_modify_email_atMark {
+	font-size: 18px;
+}
+
+#member_modify_email_datalist {
+	-webkit-appearance: none; /* 네이티브 외형 감추기 */
+	-moz-appearance: none;
+	appearance: none;
+	width: 108px;
 	height: 30px;
-	font-size:20px;
-	padding-left:20px;
-	padding-bottom:5px;
+	padding-left: 10px;
+	font-size: 18px;
 	outline: 0;
 	border-left: none;
 	border-right: none;
 	border-top: none;
-	border-bottom:2px solid #F5F0F0;
+	border-bottom: 2px solid #F5F0F0;
 }
 
-#member_modify_check_btn{
-	background-color: white;
-	border:2px solid orange;
-	width: 45px;
-	height: 33px;
-	margin-left: 5px;	
+#member_modify_email_datalist:hover {
+	border-bottom: 2px solid orange;
 }
-#member_modify_check_btn:hover{
+
+#member_modify_email_datalist:focus {
+	border-bottom: 2px solid orange;
+}
+
+#member_modify_certified_btn {
+	width: 48px;
+	height: 34px;
+	background-color: white;
+	border: solid 2px orange;
+	outline: 0;
+	margin-left: 10px;
+}
+
+#member_modify_certified_btn:hover {
 	background-color: orange;
-	color:white;
+	color: white;
 }
-#member_modify_last_btn_div{
-	text-align: center;
+
+#member_modify_tel_color {
+	height: 30px;
 }
-#member_modify_last_btn{
-	border: 2px solid orange;
-	background-color: white;
+
+.member_modify_tel {
+	height: 23px;
+	width: 75px;
+	font-size: 18px;
+	outline: 0;
+	border-left: none;
+	border-right: none;
+	border-top: none;
+	padding-left: 20px;
+	padding-bottom: 5px;
+}
+
+.member_modify_tel_hover_focus :hover {
+	border-bottom: 2px solid orange;
+}
+
+.member_modify_tel_hover_focus :focus {
+	border-bottom: 2px solid orange;
+}
+
+#member_modify_next_btn {
+	border: solid 2px orange;
 	width: 200px;
 	height: 50px;
-	font-size: 20px;
-	color:gray;
+	background-color: white;
+	cursor: pointer;
 	outline: 0;
+	margin: 7px 320px;
 }
-#member_modify_last_btn:hover{
+
+#member_modify_next_btn:hover {
 	background-color: orange;
-	color:white;
+	color: white;
 }
 
-
-
+.member_modify_error {
+	width: 225px;
+	height: 20px;
+	line-height: 20px;
+	padding-left: 20px;
+	color: #ff0000;
+	font-size: 12px;
+	text-align: left;
+	line-height: 20px;
+	margin-top: 5px;
+	margin-bottom: 20px;
+}
