--- a/src/main/webapp/resources/css/new_book.css
+++ b/src/main/webapp/resources/css/new_book.css
@@ -413,3 +413,255 @@
 .button:active {
 	outline: none;
 }
+
+/* 책 상세 */
+.new_book_info {
+	height: 0;
+	overflow: hidden;
+	opacity: 0;
+	transition-duration: 0.5s;
+	transition-property: height;
+	background: #f8f8f8;
+}
+
+.new_book_info.open {
+	height: 800px;
+	opacity: 1;
+	background: #f8f8f8 url(../resources/img/bg_text_center.png) center no-repeat;
+	padding-bottom: 68px;
+}
+
+.new_book_inner_info {
+	width: 940px;
+	margin: 0 auto;
+}
+
+.new_book_inner_info .new_book {
+	float: left;
+	margin: 0 auto;
+}
+
+.new_book_inner_info .new_book_author {
+	float: right;
+	width: 280px;
+	background-color: #fff;
+	box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.05);
+	margin: 198px 0 0 20px;
+}
+
+.new_book_inner_info .new_book_author .new_book_user_image {
+	width: 110px;
+	height: 110px;
+	border-radius: 55px;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	margin: 48px auto 19px;
+}
+
+.new_book_inner_info .new_book_author .new_book_user_name {
+	width: 164px;
+	height: 18px;
+	font-size: 14px;
+	color: #333;
+	letter-spacing: -0.3px;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	margin: 0 auto;
+	text-align: center;
+}
+
+.new_book_inner_info .new_book_author .new_book_user_description {
+	width: 164px;
+	line-height: 1.62;
+	letter-spacing: -0.3px;
+	color: rgba(149, 149, 149, 0.66);
+	overflow: hidden;
+	text-overflow: ellipsis;
+	margin: 23px auto 0;
+	font-size:14px;
+	text-align: center;
+	display: -webkit-box;
+	-webkit-line-clamp: 5;
+	max-height: 108px;
+	-webkit-box-orient: vertical;
+}
+
+.new_book_inner_info .new_book_author .new_book_user_follow {
+	margin: 32px auto 0;
+	width: 130px;
+	height: 40px;
+	border: 1px solid #000;
+	text-align: center;
+	font-size: 13px;
+	color: #333;
+	line-height: 42px;
+}
+
+.new_book_inner_info .new_book_desc {
+	clear: both;
+}
+
+.new_book_inner_info .new_book .new_book_title {
+	position: relative;
+	overflow: hidden;
+}
+
+.new_book_inner_info .new_book .new_book_title .title_book {
+	font-size: 32.3px;
+	float: left;
+	font-weight: normal;
+	font-family: Nanum Myeongjo;
+	width: 378px;
+	line-height: 1.3;
+	overflow: hidden;
+	display: -webkit-box;
+	-webkit-line-clamp: 3;
+	max-height: 160px;
+	-web-kit-box-orient: vertical;
+}
+
+.new_book_inner_info .new_book_author .publisher_book {
+	font-size: 12px;
+	display: block;
+	margin-top: 4px;
+	text-align: center;
+	letter-spacing: -0.3px;
+	color: #959595;
+}
+
+.new_book_inner_info .new_book_desc .new_book_desc_buy {
+	width: 387px;
+	font-size: 14px;
+	font-weight: 300;
+	font-style: normal;
+	font-stretch: normal;
+	line-height: 1.64;
+	text-align: left;
+	color: #959595;
+	float: left;
+	padding-top: 21px;
+}
+
+.new_book_inner_info .new_book_desc .new_book_description {
+	width: 389px;
+	max-height: 82px;
+	line-height: 1.64;
+	color: #959595;
+	overflow: hidden;
+	display: -webkit-box;
+	-webkit-line-clamp: 4;
+	max-height: 314px;
+	-webkit-box-orient: vertical;
+}
+
+.new_book_inner_info .new_book_desc .btn_buy_book {
+	margin-top: 45px;
+	width: 130px;
+	height: 40px;
+	border-radius: 1px;
+	background-color: #333;
+	font-size: 13px;
+	font-weight: 300;
+	font-style: normal;
+	font-stretch: normal;
+	line-height: 1.54;
+	letter-spacing: -0.3px;
+	color: #fff;
+	left: 0;
+}
+
+.new_book_inner_info .new_book_desc .new_book_image {
+	float: left;
+	width: 160px;
+	height: 218px;
+	border: 1px solid #eee;
+	box-sizing: content-box;
+	margin-left: 84px;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+	position: relative;
+	font-size: 0;
+}
+
+.new_book_inner_info .new_book_desc .new_book_image .border_left {
+	position: absolute;
+	width: 6px;
+	height: 100%;
+	background: #000;
+	top: 0;
+	opacity: 0.03;
+}
+
+.new_book_inner_info .new_book_desc .new_book_share_sentence {
+	width: 640px;
+	overflow: hidden;
+	padding-top: 20px;
+	clear: both;
+	position: relative;
+}
+
+.new_book_inner_info .new_book_desc .new_book_share {
+	margin-top: 284px;
+	width: 155px;
+	height: 62px;
+	float: left;
+}
+
+.new_book_inner_info .new_book_desc .new_book_sentence {
+	width: 460px;
+	height: 310px;
+	box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.05);
+	float: left;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+	position: relative;
+}
+
+.new_book_inner_info .new_book_desc .new_book_text_sentence {
+	top: 51px;
+	left: 58px;
+	width: 314px;
+	height: 151px;
+	font-family: Nanum Myeongjo;
+	font-size: 26px;
+	line-height: 1.46;
+	letter-spacing: -0.7;
+	color: #fff;
+	position: absolute;
+	overflow: hidden;
+	display: -webkit-box;
+	-webkit-line-clamp: 4;
+	max-height: 314px;
+	-webkit-box-orient: vertical;
+}
+
+.new_book_inner_info .new_book_desc .new_book_sentence .quotation {
+	width: 15px;
+	height: 10px;
+	display: block;
+	position: absolute;
+	top: 41px;
+	left: 41px;
+}
+
+.new_book_inner_info .new_book_desc .new_book_sentence .layer_dimmed {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
+}
+
+.new_book_inner_info .new_book_desc .ment_sentence {
+	position: absolute;
+	right: 36px;
+	bottom: 32px;
+	font-family: Nanum Myeongjo;
+	font-size: 14px;
+	letter-spacing: -0.3px;
+	text-align: left;
+	color: rgba(255, 255, 255, 0.7);
+}
