1문의하기 checked 처리하기 2.페이지 드래그 못하게 만들기 3.첨부파일 용량 및 개수 수정중

--- a/src/main/webapp/resources/css/inquire.css
+++ b/src/main/webapp/resources/css/inquire.css
@@ -4,6 +4,12 @@ body{
 	font-family: 'NanumGothic', 'serif';
 	margin: 0px;
 	background-image: url(../img/background_img/login_page.png);
+	
+	oncontextmenu="return false"
+	 ondragstart="return false"
+	  onselectstart="return false"
+
+
 }
 .inq_vali_date{
 	width:280px;
