//회원가입 기능 수정 1. 회원가입창에서 enter시에 자동submit되던것을 방지 2. input란에서 엔터시 다음 input으로 이동하도록 수정 3. 회원가입,로그인,메인페이지 드래그블럭 방지 설정

--- a/src/main/webapp/resources/css/header.css
+++ b/src/main/webapp/resources/css/header.css
@@ -384,7 +384,8 @@ body{
 }
 
 #head-profile-service-hr{ /*프로필 중앙선 li*/
-	paddding:10px 0;
+	padding:10px 0;
+	margin:30px 20px !important;
 }
 
 .head-profile-service-bar{
