--- a/src/main/webapp/resources/css/new_book.css
+++ b/src/main/webapp/resources/css/new_book.css
@@ -361,7 +361,7 @@
 
 .item_work .author {
 	font-size: 13px;
-	color: #fef1be;
+	color: #ff8040;
 	margin-top: 7px;
 	width: 220px;
 	overflow: hidden;
@@ -371,7 +371,7 @@
 }
 
 .item_work .author a {
-	color: #fef1be;
+	color: #ff8040;
 }
 
 .by {
