1. 자몽 개인정보처리방침 눌렀을때 공지사항으로 이동하게 만듬 2. 문의하기페이지 첨부파일 다중업로드 가능하게 만듬 3. Admin_inquire(관리자 문의하기)페이지 view and Controller 만들기 시작

--- a/src/main/webapp/resources/css/inquire.css
+++ b/src/main/webapp/resources/css/inquire.css
@@ -297,7 +297,17 @@ body{
 ::selection{
 	background:RGB(245,124,104,0.6);
 }
-
+.btn{
+	width: 73px;
+    display: inline-block;
+    height: 24px;
+    border: 1px solid black;
+    font-size: 13.3px;
+    align-content: center;
+    text-align: center;
+    background-color: blanchedalmond;
+    line-height: 24px;
+}
 
 
 
