--- a/src/main/webapp/resources/css/joinmembership.css
+++ b/src/main/webapp/resources/css/joinmembership.css
@@ -390,6 +390,19 @@ body{
     border-bottom: 1px solid #eee;
     width: 40%;
 }
+
+#join_membership_profile_editor_error{
+	display:inline;
+	width:240px;
+	height:11px;
+	line-height:11px;
+	padding-left:15px;
+	color:#ff0000;
+	font-size: 11px;
+    text-align: left;
+    margin-top: 5px;
+}
+
 .join_membership_profile_font{
 	margin-top:35px;
 	font-size: 13px;
