1.신고하기페이지  어느해상도에서 켜도 정중앙에 띄울수 있게 수정 Validate 수정 앞에뜬 validate 이후 뒤에 validate 뜨면 앞에 validate 없애기
2.문의하기페이지
첨부파일용량보여주는 부분 없애기

문의내용 MAXLENGTH 400자까지 늘리기

셀렉트 value값 영어에서 한글로 그대로 옮겨오기

폰번호 +82 없애고 Placeholder에 -없이 숫자만 입력
ex)01012345678로바꾼뒤 11자리까지만 가능하게 만들기

3.관리자 문의하기 페이지

리스트에서 클릭하였을때에 상세문의내용 뷰페이지 만드는중

--- a/src/main/webapp/resources/css/accuse.css
+++ b/src/main/webapp/resources/css/accuse.css
@@ -19,12 +19,14 @@
     top: 0;
     left: 0;
     overflow: auto;
-    padding-top:1%;
+	display:flex;
+	justify-content:center;
+	align-items:center;    
     
 }
 #acc_report_base{
 	width: 460px;
-    margin: 0px auto 0;
+	height:600px;
     background-color:snow;	
 }
 #acc_report_base h3{
