--- a/src/main/webapp/resources/css/new_post.css
+++ b/src/main/webapp/resources/css/new_post.css
@@ -72,3 +72,20 @@ ul li {
 	vertical-align:top;
 	margin:auto 0px;
 }
+
+/*로딩화면을 위한 css*/
+.wrap-loading{ /*화면 전체를 어둡게 합니다.*/
+    position: fixed;
+    left:0;
+    right:0;
+    top:0;
+    bottom:0;
+    background: rgba(0,0,0,0.8);
+}
+.wrap-loading div{ /*로딩 이미지*/
+    position: fixed;
+    top:50%;
+    left:50%;
+    margin-left: -21px;
+    margin-top: -21px;
+}
