--- a/src/main/webapp/resources/css/category.css
+++ b/src/main/webapp/resources/css/category.css
@@ -132,82 +132,6 @@ line-height: 42px;
 	text-align:left;
 	margin-left:30px;
 }
-#cat_write_count2{
-	margin-top:10px;
-	width:120px;
-	height:20px;
-	color:#333;
-	text-decoration:none;
-	font-size:12px;
-	text-align:left;
-	margin-left:30px;
-}
-#cat_sub_count2{
-	width:120px;
-	height:20px;
-	color:#333;
-	text-decoration:none;
-	font-size:12px;
-	text-align:left;
-	margin-left:30px;
-}
-#cat_write_count3{
-	margin-top:10px;
-	width:120px;
-	height:20px;
-	color:#333;
-	text-decoration:none;
-	font-size:12px;
-	text-align:left;
-	margin-left:30px;
-}
-#cat_sub_count3{
-	width:120px;
-	height:20px;
-	color:#333;
-	text-decoration:none;
-	font-size:12px;
-	text-align:left;
-	margin-left:30px;
-}
-#cat_write_count4{
-	margin-top:10px;
-	width:120px;
-	height:20px;
-	color:#333;
-	text-decoration:none;
-	font-size:12px;
-	text-align:left;
-	margin-left:30px;
-}
-#cat_sub_count4{
-	width:120px;
-	height:20px;
-	color:#333;
-	text-decoration:none;
-	font-size:12px;
-	text-align:left;
-	margin-left:30px;
-}
-#cat_write_count5{
-	margin-top:10px;
-	width:120px;
-	height:20px;
-	color:#333;
-	text-decoration:none;
-	font-size:12px;
-	text-align:left;
-	margin-left:30px;
-}
-#cat_sub_count5{
-	width:120px;
-	height:20px;
-	color:#333;
-	text-decoration:none;
-	font-size:12px;
-	text-align:left;
-	margin-left:30px;
-}
 #cat_writer_list1{
 	width:150px;
 	height:190px;
@@ -218,43 +142,6 @@ line-height: 42px;
 	margin-bottom:5px;
     margin-left: 0px;
 
-}
-#cat_writer_list2{
-	width:150px;
-	height:190px;
-	margin:20px 15px 10px 15px;
-	border:1px solid #FBA621;
-	justify-content:center;	
-	text-decoration: none;
-	margin-bottom:5px;
-}
-#cat_writer_list3{
-	width:150px;
-	height:190px;
-	margin:20px 15px 10px 15px;
-	border:1px solid #FBA621;
-	justify-content:center;	
-	text-decoration: none;
-	margin-bottom:5px;
-}
-#cat_writer_list4{
-	width:150px;
-	height:190px;
-	margin:20px 15px 10px 15px;
-	border:1px solid #FBA621;
-	justify-content:center;	
-	text-decoration: none;
-	margin-bottom:5px;
-}
-#cat_writer_list5{
-	width:150px;
-	height:190px;
-	margin:20px 15px 10px 15px;
-	border:1px solid #FBA621;
-	justify-content:center;	
-	text-decoration: none;
-	margin-bottom:5px;
-	margin-right:0px;
 }
 .cat_writing_block{
 	width:940px;
@@ -413,5 +300,87 @@ line-height: 42px;
 	background-color: #ffdfbf;
 	cursor: pointer;
 	float: left;
+}
+.cat_book_block{
+	width:940px;
+	height:390px;
+	justify-content:center;
+	display:flex;
+	margin-top:20px;
+	border:0px solid #00ffff;
+	margin-bottom:60px;
+}
+.cat_book{
+	width:260px;
+	height:390px;
+	margin:0px auto;
+	padding: 0px 10px;
+	position: relative;
+	cursor:pointer;
+}
+.cat_book_img{
+	width:260px;
+	height:390px;
+	filter: brightness(50%);
+}
+.cat_story_title{
+	height:75px;
+	color: #959595;
+	font-size: 16px;
+	margin-top:45px;
+	text-align:center;
+	font: #333333;
+}
+.cat_story_writer{
+    font-size:12px;
+    color:#959595;
+    width:100%;
+    display:inline-block;
+    margin-top:15px;
+}
+.cat_book_inner{
+	width:150px;
+	height:180px;
+	background-color:#ffffffe0;
+	margin:auto auto;
+	position: absolute;
+	top:25%;
+	left:25%;
 	
+}
+.cat_jamong_book{
+	display: block;
+    position: absolute;
+    bottom: 22px;
+    left: 0;
+    width: 100%;
+    font-size: 15px;
+    line-height: 18px;
+    color: #fff;
+    text-align: center;
+}
+.cat_inner_line{
+	width: 11px;
+    position: absolute;
+    top: 0;
+    left: 18px;
+    height: 100%;
+}
+.cat_inner_line:after {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 2px;
+    height: 100%;
+    background: rgba(255,255,255,.1);
+    content: '';
+}
+.cat_inner_line:before {
+    position: absolute;
+    top: 0;
+    right: 2px;
+    width: 1px;
+    height: 100%;
+    background: rgba(0,0,0,.05);
+    content: '';
 }
