--- a/src/main/webapp/resources/css/category.css
+++ b/src/main/webapp/resources/css/category.css
@@ -179,7 +179,7 @@ line-height: 42px;
 	top:0;
 	z-index:2;
 }
-.cat_story_title{
+.cat_write_title{
 	color:#efefef;
 	font-size:28px;
 	margin-top:60px;
@@ -303,9 +303,9 @@ line-height: 42px;
 }
 .cat_book_block{
 	width:940px;
-	height:390px;
-	justify-content:center;
-	display:flex;
+	min-width:940px;
+	justify-content:flex-start;
+	flex-wrap: wrap;
 	margin-top:20px;
 	border:0px solid #00ffff;
 	margin-bottom:60px;
@@ -313,7 +313,7 @@ line-height: 42px;
 .cat_book{
 	width:260px;
 	height:390px;
-	margin:0px auto;
+	margin:10px 10px;
 	padding: 0px 10px;
 	position: relative;
 	cursor:pointer;
@@ -323,7 +323,7 @@ line-height: 42px;
 	height:390px;
 	filter: brightness(50%);
 }
-.cat_story_title{
+.cat_book_title{
 	height:75px;
 	color: #959595;
 	font-size: 16px;
