--- a/src/main/webapp/resources/css/m.css
+++ b/src/main/webapp/resources/css/m.css
@@ -410,10 +410,11 @@ body{
 .main-title-text{
 	text-align:center;
 	margin-top:25px;
-	margin-bottom:25px;
+	margin-bottom:45px;
 }
 
 .main-title-text h3{
+	display:inline-block;
 	width:940px;
 	font-family: 'NanumMyeongjo','serif';
 	font-size: 45px;
@@ -625,6 +626,7 @@ body{
 	padding:0 20px;
 }
 .writting-item-head-inner-cont-sub{
+	font-family: 'NanumMyeongjo','serif';
 	max-height: 100px;
 	padding:0 20px;
 	margin-top:10px;
@@ -644,13 +646,20 @@ body{
 .writting-item-head-inner-cont-sub span{
 	display:inline-block;
 	margin:0;
-	max-height: 100px;
+	margin-top: 17px;
+	height:80px;
+	max-height: 80px;
+	line-height:20px;
 	font-size: 18px;
 	overflow: hidden;		/*내용이 넘어가면 숨김*/
 	white-space: normal;	/*줄바꿈 처리 : width넘어가면 엔터처리*/ 
 	word-wrap: break-word;	/*엔터처리시에 단어단위로 끊어서 사용-현재적용안됨..*/
 	text-overflow: ellipsis;/*문자 over되는거 ...처리*/
+	display: -webkit-box; 
+	-webkit-line-clamp: 4; /* 라인수 */ 
+	-webkit-box-orient: vertical;
 }/* 문자수를 제한해서 소제목을 보여줄 것*/
+
 .writting-item-head-inner span{
 	display: block;
 	font-size: 14px;
@@ -659,6 +668,7 @@ body{
 /* 추천 작가 란 */
 #recom_author{
 	background:rgb(245,124,104,0.1);
+	height:860px;
 }
 #recom_author-cont{
 	height: 620px;
@@ -701,8 +711,8 @@ body{
 }
 
 .recom_author-item-intro{
-	margin-right:10px;
-	margin-left:10px;
+	margin-right:15px;
+	margin-left:15px;
 }
 .recom_author-item-intro strong{
 	font-size:20px;
@@ -718,6 +728,7 @@ body{
 }
 .recom-author-intro{
 	font-size:12px;
+	width:160px;
 	color:#797979;
 	overflow: hidden;		/*내용이 넘어가면 숨김*/
 	white-space: normal;	/*줄바꿈 처리 : width넘어가면 엔터처리*/ 
