--- a/src/main/webapp/resources/css/request_author.css
+++ b/src/main/webapp/resources/css/request_author.css
@@ -1,54 +1,21 @@
 @charset "UTF-8";
 
+body {margin:0;	padding:0; background-color:bisque;}
+a:link{text-decoration:none; color:gray;}
+a:active{text-decoration:none;}
+a:visited{text-decoration:none;}
+a:hover{text-decoration:underline; color:#F57C68;}
 
 .clear{
 	clear:both;
 }
 
-body {
-	margin:0;
-}
-
-body a {
-	text-decoration:none;
-	color:#3b3b3b;
-}
-
-#req_close img{
-	width:20px;
-	height:20px;
-}
-
-#req_wrap {
-   display:none;
-   margin: 0 auto;
-   padding-top:100px;
-   width:100%;
-   height:100%;
-   z-index:10100;
-   background:url(../img/background_img/write_page.png);
-   position:fixed;
-   max-height:900px;
-   overflow-y: auto;
-}
-
 #req_auth_title {
-	width:700px;
-	padding-top:5px;
-	margin:0px auto;
-	margin-bottom:50px;
-	text-align:left;
-	background-color:#fff;
-	display:flex;
-	justify-content:space-between;
-	padding-left:35px;
-	box-sizing:border-box;
+	
 }
 
 #req_auth_title h1{
-	display:inline-block;
-	margin-top: 15px;
-	margin-bottom: 0;
+	text-align:center;
 }
 
 #req_auth_wrap {
@@ -64,11 +31,10 @@ body a {
 }
 
 .req_form_Mtitle b{
-	font-size:30px;
+	font-size:25px;
 	color:#3b3b3b;
 	margin-left:22px;
 	margin-bottom:10px;
-	
 }
 
 .req_form_Stitle {
@@ -79,14 +45,24 @@ body a {
 .req_form_Stitle b{
 	line-height:25px;
 	font-size:12px;
-	color:blue;
+	color:red;
 }
 
 .req_form_textarea {
-	min-height:200px;
-	margin:20px;
-	padding:10px;
-	border:1px solid #3b3b3b;
+	width: 100%; /* 원하는 너비 설정 */
+	height: 250px; /* 높이값 초기화 */
+	resize:none; /* 크기조절 막기 (크롬) */ 
+	line-height : normal; /* line-height 초기화 */
+	padding: .5em .5em; /* 원하는 여백 설정, 상하단 여백으로 높이를 조절 */
+	font-family: inherit; /* 폰트 상속 */
+	border: 1px solid #999;
+	border-radius: 0; /* iSO 둥근모서리 제거 */
+	outline-style: none; /* 포커스시 발생하는 효과 제거를 원한다면 */
+	-webkit-appearance: none; /* 브라우저별 기본 스타일링 제거 */
+	-moz-appearance: none;
+	appearance: none;
+    font-size:13px;
+	
 }
 
 .req_form_textarea p {
@@ -96,7 +72,6 @@ body a {
 }
 
 #req_form_upload {
-	padding-left:150px;
 	margin:20px;
 }
 
@@ -110,55 +85,15 @@ body a {
 	min-width:497px;
 	max-width:500px;
 	margin-bottom:8px;
-	
+	padding-left:5px;
 }
 
 .req_form_file {
 	margin-top:15px;
 }
 
-.req_form_file_add {
-	display:inline;
-	position:absolute;
-	margin-left:45px;
-	border: 1px solid gray;
-	border-radius:50px;
-	padding:7px;
-	box-sizing:border-box;
-	font-size:13px;
-	cursor:pointer;
-}
-
-.req_form_file_add:hover {
-	background-color:grey;
-	color:white;
-}
-
-.req_form_file_name {
-	display:inline-block;
-	min-width:500px;
-	max-width:500px;
-	border:1px solid gray;
-	padding:5px;
-	box-sizing:border-box;
-}
-
 #req_auth_btn_wrap {
 	display:flex;
 	justify-content: center;
-}
-
-#req_auth_btn_wrap a{
-	cursor:pointer;
-	margin: 10px 50px;
-	border: 1px solid grey;
-	border-radius:55px;
-	box-sizing: border-box;
-	padding:10px;
-}
-
-#req_auth_btn_wrap a:hover{
-	background-color:grey;
-	color:white;
 }
 
